add gdg image to preface

--- a/Sections/04_Preface.Rmd
+++ b/Sections/04_Preface.Rmd
@@ -10,21 +10,27 @@ Parts of this dissertation have been published and include work performed by col
 
 **Chapter 1**
 
-Parts of Chapter 1 subsection "DNA methylation" has been submitted to be published as a book chapter by V Yuan and WP Robinson (2022).
+1. Figure 1 "Structure of the placenta and chorionic villi" is from Del Gobbo 2021, which is an image that was adapted from Del Gobbo 2019. 
+This figure has been reprinted with permission from the authors and copyright holder, Springer-Verlag GmbH Germany, part of Springer Nature.
 
+Del Gobbo GF (2021) Genomic profiling in the placenta: toward a greater understanding of genetic variation contributing to placental insufficiency and fetal growth restriction. University of British Columbia
 
-Parts of Chapter 1 subsection "Epigenetics and placenta cell types" have been published as a book chapter in *Human Reproductive and Prenatal Genetics*.
-Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL (2019) Chapter 13 - Epigenetic Modifications in the Human Placenta. 
-In: Leung PCK, Qiao J (eds) Human Reproductive and Prenatal Genetics. 
-Academic Press, pp 293–311
+Del Gobbo GF, Konwar C, Robinson WP (2019) The significance of the placental genome and methylome in fetal and maternal health. Hum Genet. https://doi.org/10.1007/s00439-019-02058-w
+
+2. Parts of Chapter 1 subsection "DNA methylation" has been submitted to be published as a book chapter by V Yuan and WP Robinson (2022). 
+I wrote all parts (general features of DNA methylation, DNA methylation in development) that were included in this dissertation. All authors provided critical revisions of the final manuscript.
+
+3. Parts of Chapter 1 subsection "Epigenetics and placenta cell types" have been published as a book chapter in *Human Reproductive and Prenatal Genetics*.
+    Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL (2019) Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J (eds) Human Reproductive and Prenatal Genetics. Academic Press, pp 293–311
 Copyright © 2019 Elsevier Inc. 
+
 I wrote the section on titled "The epigenetic profiles of placental cell types".
 WP Robinson wrote the Overview and introduction sections. 
 MS Peñaherrera  wrote the "Monoallelic gene inactivation" section.
 SL Wilson and C Konwar wrote the Placental Pathology and "Clinical applications" section.
 All authors reviewed and edited the final manuscript.
 
-A version of Chapter 1 subsection "Placental DNA methylation variation across human populations" has been published en *BMC Epigenetics & Chromatin*.
+4. A version of Chapter 1 subsection "Placental DNA methylation variation across human populations" has been published en *BMC Epigenetics & Chromatin*.
 Yuan V, Price EM, Del Gobbo G, Mostafavi S, Cox B, Binder AM, Michels KB, Marsit C, Robinson WP (2019) Accurate ethnicity prediction from placental DNA methylation data. 
 Epigenetics & Chromatin 12:51. 
 https://doi.org/10.1186/s13072-019-0296-3
@@ -36,7 +42,7 @@ EMP and WR conceived of the study.
 All authors approved and contributed to the writing of the final manuscript. 
 All authors read and approved the final manuscript.
 
-A version of Chapter 1 subsection "Epigenetics and placenta cell types" has been published en *BMC Genomics*.
+5. A version of Chapter 1 subsection "Epigenetics and placenta cell types" has been published en *BMC Genomics*.
 Yuan V, Hui D, Yin Y, Peñaherrera MS, Beristain AG, Robinson WP (2021) Cell-specific characterization of the placental methylome. BMC Genomics 22:6.
 https://doi.org/10.1186/s12864-020-07186-6
 © Yuan *et al.* 2021, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
@@ -48,7 +54,7 @@ All authors read, edited, and approved the final manuscript.
 
 **Chapter 2**
 
-A version of chapter 2 has be published in BMC Epigenetics & Chromatin.
+6. A version of chapter 2 has be published in BMC Epigenetics & Chromatin.
 Yuan V, Price EM, Del Gobbo G, Mostafavi S, Cox B, Binder AM, Michels KB, Marsit C, Robinson WP (2019) Accurate ethnicity prediction from placental DNA methylation data. 
 Epigenetics & Chromatin 12:51. 
 https://doi.org/10.1186/s13072-019-0296-3
@@ -64,7 +70,7 @@ Data, text, figures and tables published in this article are contained in Chapte
 
 **Chapter 3**
 
-A version of chapter 3 has be published in BMC Genomics.
+7. A version of chapter 3 has be published in BMC Genomics.
 Yuan V, Hui D, Yin Y, Peñaherrera MS, Beristain AG, Robinson WP (2021) Cell-specific characterization of the placental methylome. BMC Genomics 22:6.
 https://doi.org/10.1186/s12864-020-07186-6
 © Yuan *et al.* 2021, under the Creative Commons Attribution 4.0 International License (<http://creativecommons.org/licenses/by/4.0/>).
