add pidsley2016 reference

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,20 @@
 
+@article{pidsley2016,
+	title = {Critical evaluation of the {Illumina} {MethylationEPIC} {BeadChip} microarray for whole-genome {DNA} methylation profiling},
+	volume = {17},
+	issn = {1474-760X (Electronic) 1474-7596 (Linking)},
+	url = {http://genomebiology.biomedcentral.com/articles/10.1186/s13059-016-1066-1},
+	doi = {10.1186/s13059-016-1066-1},
+	abstract = {In recent years the Illumina HumanMethylation450 (HM450) BeadChip has provided a user-friendly platform to profile DNA methylation in human samples. However, HM450 lacked coverage of distal regulatory elements. Illumina have now released the MethylationEPIC (EPIC) BeadChip, with new content specifically designed to target these regions. We have used HM450 and whole-genome bisulphite sequencing (WGBS) to perform a critical evaluation of the new EPIC array platform. EPIC covers over 850,000 CpG sites, including {\textgreater}90 \% of the CpGs from the HM450 and an additional 413,743 CpGs. Even though the additional probes improve the coverage of regulatory elements, including 58 \% of FANTOM5 enhancers, only 7 \% distal and 27 \% proximal ENCODE regulatory elements are represented. Detailed comparisons of regulatory elements from EPIC and WGBS show that a single EPIC probe is not always informative for those distal regulatory elements showing variable methylation across the region. However, overall data from the EPIC array at single loci are highly reproducible across technical and biological replicates and demonstrate high correlation with HM450 and WGBS data. We show that the HM450 and EPIC arrays distinguish differentially methylated probes, but the absolute agreement depends on the threshold set for each platform. Finally, we provide an annotated list of probes whose signal could be affected by cross-hybridisation or underlying genetic variation. The EPIC array is a significant improvement over the HM450 array, with increased genome coverage of regulatory regions and high reproducibility and reliability, providing a valuable tool for high-throughput human methylome analyses from diverse clinical samples.},
+	number = {1},
+	journal = {Genome Biology},
+	author = {Pidsley, Ruth and Zotenko, Elena and Peters, Timothy J. and Lawrence, Mitchell G. and Risbridger, Gail P. and Molloy, Peter and Van Djik, Susan and Muhlhausler, Beverly and Stirzaker, Clare and Clark, Susan J.},
+	year = {2016},
+	keywords = {dna methylation, enhancers, epic, EPIC,DNA methylation,HM450,Whole-genome bisulphite, hm450, microarray, wgbs, whole-genome bisulphite sequencing},
+	pages = {208--208},
+	file = {Pidsley et al. - 2016 - Critical evaluation of the Illumina MethylationEPIC BeadChip microarray for whole-genome DNA methylation profili:C\:\\Users\\victo\\Zotero\\storage\\QJLQTGA9\\Pidsley et al. - 2016 - Critical evaluation of the Illumina MethylationEPIC BeadChip microarray for whole-genome DNA methylation profili.pdf:application/pdf},
+}
+
 @phdthesis{delgobbo2021,
 	title = {Genomic profiling in the placenta : toward a greater understanding of genetic variation contributing to placental insufficiency and fetal growth restriction},
 	shorttitle = {Genomic profiling in the placenta},
