ch3 remove webpage links

--- a/Sections/10_Chapter_3.Rmd
+++ b/Sections/10_Chapter_3.Rmd
@@ -127,7 +127,7 @@ HBs cluster most closely with monocytes and granulocytes, consistent with them h
 
 ### Canonical placental epigenetic features are not always present in all constituent cells
 
-To determine if previously identified placental specific features of DNAm are cell specific, we compared cell-type specific DNAm at partially methylated domains (PMDs), genomic imprinting, and repetitive elements [@schroeder2013; @hanna2016; @price2012] [[15](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#ref-CR15 "Schroeder DI, Blair JD, Lott P, Yu HOK, Hong D, Crary F, et al. The human placenta methylome. Proc Natl Acad Sci. 2013;110(15):6037–42."), [18](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#ref-CR18 "Hanna CW, Peñaherrera MS, Saadeh H, Andrews S, McFadden DE, Kelsey G, et al. Pervasive polymorphic imprinted methylation in the human placenta. Genome Res. 2016;26(6):756–67."), [38](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#ref-CR38 "Price EM, Cotton AM, Peñaherrera MS, McFadden DE, Kobor MS, Robinson W. Different measures of “genome-wide” DNA methylation exhibit unique properties in placental and somatic tissues. Epigenetics. 2012;7(6):652–63.")]. PMDs are large (\>100kb) regions of lower average methylation (\<70%) compared to surrounding regions. Placental PMDs are thought to contribute to the observation that placental DNAm on average is much lower than other human tissues [@robinson2015]. To characterize their cell-specificity, we calculated the percentage of CpGs that are found in previously defined placental PMDs [@schroeder2013] with DNAm falling into 20% intervals (0--20%, 20--40%, 40--60%, 60--80%, 80--100%).
+To determine if previously identified placental specific features of DNAm are cell specific, we compared cell-type specific DNAm at partially methylated domains (PMDs), genomic imprinting, and repetitive elements [@schroeder2013; @hanna2016; @price2012]. PMDs are large (\>100kb) regions of lower average methylation (\<70%) compared to surrounding regions. Placental PMDs are thought to contribute to the observation that placental DNAm on average is much lower than other human tissues [@robinson2015]. To characterize their cell-specificity, we calculated the percentage of CpGs that are found in previously defined placental PMDs [@schroeder2013] with DNAm falling into 20% intervals (0--20%, 20--40%, 40--60%, 60--80%, 80--100%).
 We observed that DNAm levels in PMDs is highly cell-specific (Figure \@ref(fig:ch3fig4)a).
 TB, like CV, have more CpGs with low levels of DNAm in PMDs (0--40%) compared to other cell types.
 HB show a strong bias towards higher DNAm levels, with over 43% of CpGs in PMDs exhibiting \>80% DNAm.
